// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bottom-aligned, default scales 1`] = `
"<g class=\\"highlights\\"></g>
<g class=\\"axis xAxis\\" fill=\\"none\\" font-size=\\"10\\" font-family=\\"sans-serif\\" text-anchor=\\"middle\\" transform=\\"translate(0,264)\\">
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"translate(78.5,0)\\">
    <line stroke=\\"#000\\" y2=\\"10\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"13\\" dy=\\"0.71em\\" id=\\"webFrameMDefaultxLabel\\">Oranges</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"translate(251.5,0)\\">
    <line stroke=\\"#000\\" y2=\\"10\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"13\\" dy=\\"0.71em\\" id=\\"webFrameMDefaultxLabel\\">Lemons</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"translate(424.5,0)\\">
    <line stroke=\\"#000\\" y2=\\"10\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"13\\" dy=\\"0.71em\\" id=\\"webFrameMDefaultxLabel\\">Apples</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"translate(597.5,0)\\">
    <line stroke=\\"#000\\" y2=\\"10\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"13\\" dy=\\"0.71em\\" id=\\"webFrameMDefaultxLabel\\">Pears</text>
  </g>
</g>"
`;

exports[`top-aligned, default scales 1`] = `
"<g class=\\"highlights\\"></g>
<g class=\\"axis xAxis\\" fill=\\"none\\" font-size=\\"10\\" font-family=\\"sans-serif\\" text-anchor=\\"middle\\">
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"translate(78.5,0)\\">
    <line stroke=\\"#000\\" y2=\\"-10\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-13\\" dy=\\"0em\\" id=\\"webFrameMDefaultxLabel\\">Oranges</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"translate(251.5,0)\\">
    <line stroke=\\"#000\\" y2=\\"-10\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-13\\" dy=\\"0em\\" id=\\"webFrameMDefaultxLabel\\">Lemons</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"translate(424.5,0)\\">
    <line stroke=\\"#000\\" y2=\\"-10\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-13\\" dy=\\"0em\\" id=\\"webFrameMDefaultxLabel\\">Apples</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"translate(597.5,0)\\">
    <line stroke=\\"#000\\" y2=\\"-10\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-13\\" dy=\\"0em\\" id=\\"webFrameMDefaultxLabel\\">Pears</text>
  </g>
</g>"
`;
